--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "express": "^4.18.2",
+    "firebase": "^10.5.2",
     "mongodb": "^6.2.0",
     "mongoose": "^8.0.0",
     "next": "14.0.1",
